---
source: src/parser/tests.rs
expression: "crate :: parser :: tests :: parse_molt_err :: < Ident > (\"async\")"
snapshot_kind: text
---
error: Wrong token.
  ┌─ CLI input:1:1
  │
1 │ async
  │ ^^^^^ Wrong token.
